objects/OUV_Fleet__c.object
<CustomObject>
    <description>Container for details of a Fleet</description>
    <label>OUV Fleet</label>
    <nameField>
        <label>OUV Fleet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OUV Fleets</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Fleet_Code__c</fullName>
        <label>Fleet Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <description>The market that this fleet belongs to</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Ext_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VLA_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLA Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval route for this Fleet</description>
        <label>Approval Route</label>
        <referenceTo>OUV_Approval_Route__c</referenceTo>
        <relationshipLabel>OUV Fleets</relationshipLabel>
        <relationshipName>OUV_Fleets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Public_Group_Id__c</fullName>
        <description>The Salesforce Id of the related public group managed by the trigger</description>
        <label>OUV Public Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Default_CAB_Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A market should have a fleet flagged as it&apos;s CAB fleet such that OUV Vehicles are automatically created from the VISTA feed. Each market should only have one.</description>
        <label>Is Default Job Related Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Admin1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Admin2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Admin3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Day_Pass_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Pass Approver (LL6)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_DayPass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Disposal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disposal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Disposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category_1__c</fullName>
        <label>OUV Reporting Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_ReportingCategory1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Registration_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekend_Pass_Approver_LL4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekend Pass Approver (LL4)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Weekend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Overnight_Pass_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overnight Pass Approver (LL5)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_Overnight</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Default_Remarketing_Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Remarketing Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Day_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_LL6Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Weekend_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekend Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_LL4Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Overnight_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overnight Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fleets_LL5Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingReasons>
        <fullName>OUV_Fleet_Admins__c</fullName>
        <label>OUV Fleet Admins</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OUV_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
    <validationRules>
        <fullName>OUV_Fleet_Change_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED(OwnerId),
 NOT( $Permission.OUV_Change_Fleet_Owner )
)</errorConditionFormula>
        <errorMessage>You are not authorised to change the owner of this record. Please contact a member of the finance team.</errorMessage>
    </validationRules>
</CustomObject>